# ClawSynth

./: .env.example  .gitignore  README.md  README.zh-CN.md  pyproject.toml
litellm_config/: README.md  README.zh-CN.md  custom_callbacks.py  litellm_config.yaml.example  message.jsonl.example  success_events_all.jsonl.example
result/syn_data_test_v3/: output_for_check.jsonl  step1_output.jsonl  step2_output.jsonl
result/syn_data_test_v3/filegen_result/: summary.json
result/syn_data_test_v3/filegen_result/workspace_test003/: fg_chat_workspace_test003__ocr-local-1.0.0_01_23e9de04_0.jsonl
result/syn_data_test_v3/filegen_workspace_base/workspace_test002_workspace/: queries.jsonl
result/syn_data_test_v3/openclaw_result/: checkpoint.jsonl  summary.json
src/: README.md  README.zh-CN.md  batch_filegen.py  batch_openclaw.py
src/gen_query/: READMD.md  README.md  README.zh-CN.md  config.py  run_step0_to_step3.sh  step0_generate_random_workspaces.py  step1_generate_queries.py  step2_run_benchmark.py  step3_persona_rewrite.py
src/gen_query/data/: unique_task_instructions.json
src/gen_query/utils/: __init__.py  constants.py  jsonl_io.py  llm.py  workspace.py
src/process_data/: extract_for_check.py  process_conversations.py
src/soft_verify/: README.md  README.zh-CN.md  __init__.py  config.py  llm_client.py  pipeline.py  prompts.py  soft_tools.py  step1_plan.py  step2_evaluate.py  verifier.py  workspace_inspector.py
src/soft_verify/examples/: sample_tasks.jsonl
src/soft_verify/tests/: create_test_files.py  test_soft_tools.py
test/: test_openai_concurrency.py
(+44 files in other folders)
